# Amael-AgenticIA

./: .checkov.yaml  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  README.md  TECHNICAL_DESIGN_DOCUMENT.md  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/arch/: agent.py
agents/base/: agent_registry.py  llm_factory.py  llm_utils.py
agents/coder/: README.md  agent.py
agents/cto/: agent.py
agents/dev/: agent.py
agents/devops/: README.md  agent.py  bitbucket_client.py  camael_analyzer.py  rfc_templates.py  servicenow_client.py
agents/executor/: agent.py  batch_runner.py  step_handlers.py
agents/memory_agent/: README.md  agent.py
agents/orchestrator/: README.md
agents/planner/: agent.py  grouper.py  models.py  prompts.py
agents/productivity/: __init__.py  agent.py  calendar_manager.py  day_planner.py  email_manager.py  vault_credentials.py
agents/qa/: README.md  agent.py
agents/researcher/: __init__.py  agent.py  rag_retriever.py  web_searcher.py
agents/sre/: __init__.py  agent.py  argocd_discovery.py  bug_library.py  detector.py  diagnoser.py  healer.py  models.py  observer.py  reporter.py  runbook_consolidator.py  scheduler.py
agents/supervisor/: agent.py  prompts.py  quality_scorer.py
audio/: __init__.py  transcriber.py
camael_service/: Dockerfile  main.py  requirements.txt
clients/: __init__.py  _http.py  camael_client.py  raphael_client.py
config/: settings.py
core/: __init__.py  agent_base.py  circuit_breaker.py  constants.py  exceptions.py  message_types.py  skill_base.py  tool_base.py
docs/: MANUAL-ECOSISTEMA.md  PHASE0-ANALYSIS.md  escenarios-demo.md  speech-direccion-tecnologia.md
docs/api/: camael-service.openapi.yaml  raphael-service.openapi.yaml
docs/vault/: camael-policy.hcl  raphael-policy.hcl
interfaces/api/: auth.py
interfaces/cli/: README.md
interfaces/sdk/: README.md
k8s/agents/: 05-backend-deployment.yaml  06-demo-oom.yaml  06-github-runner-deployment.yaml  07-day-planner-cronjob.yaml  07-demo-crashloop.yaml  08-cosyvoice-deployment.yaml  08-demo-high-memory.yaml  08-morning-audio-cronjob.yaml  09-demo-degraded.yaml  09-piper-deployment.yaml  10-github-runner.yaml  11-hpa-pdb.yaml  12-conversation-pruning-cronjob.yaml  13-raphael-deployment.yaml  15-camael-deployment.yaml  kustomization.yaml
llm/: README.md
memory/: README.md
observability/: __init__.py  health.py  logging.py  metrics.py  middleware.py  slo.py  tracing.py
orchestration/: __init__.py  agent_dispatcher.py  agent_router.py  context_factory.py  state.py  workflow_engine.py
raphael_service/: Dockerfile  README.md  __init__.py  main.py  requirements.txt
runbooks/: deployment_degraded.md  loadbalancer_no_ip.md  node_pressure.md  pvc_issues.md  service_no_endpoints.md  vault_sealed.md
security/: __init__.py  sanitizer.py  validator.py
skills/: __init__.py  registry.py
storage/: __init__.py
tests/: README.md
tools/: __init__.py  registry.py
(+105 files in other folders)
